test/spec_vectors/simd_i16x8_cmp/fail/module_15.wat
(module (func $i16x8.ne-arg-empty (result v128) (i16x8.ne)))